# WvDialer

./: CMakeLists.txt  README.md  WvDialer.desktop  WvDialer.service  WvDialer.spec  wvdialer.spec
src/: CMakeLists.txt  WvDialer.notifyrc  main.cpp  mainwindow.cpp  mainwindow.h  wvdialer_icons.qrc
src/helper/: CMakeLists.txt  actions.actions  wvdialer_helper.cpp  wvdialer_helper.h
src/icons/: index.theme
src/tray/: traywidget.cpp  traywidget.h
